
- The compiler was adding an extra block around a component's
body, which meant that variables declared in the body (in perl lines
or blocks) were not seen in the cleanup section.

- The compiler was also adding "no warnings 'uninitialized'" in this
block, which could hide various errors.

- Hopefully fix $VERSION in ApacheHandler so PAUSE will not be
confused and think we have regressed.


1.30  August 11, 2005

[ INCOMPATIBLE CHANGES ]

- ** Under mod_perl2, MasonArgsMethod will default to "CGI", since
libapreq2 is still in development.  If you have successfully installed
libapreq2, just set MasonArgsMethod to "mod_perl" to use it.

[ ENHANCEMENTS ]

- Some doc tweaks to clarify that Mason should work out of the box
with both mod_perl 1 and 2.
- Added "use warnings" to all modules and made sure all tests ran
warnings-free.

[ BUG FIXES ]

- Silence a warning when HTML::Mason::ApacheHandler was loaded outside
of mod_perl.
- Support renamed Apache2::Status module.


1.29_02  June 22, 2005

[ ENHANCEMENTS ]

- ** Support for mod_perl-2.00 (mod_perl-1.99 is no longer supported
because of API changes in 2.0RC5).
- Mason recovers more gracefully from an empty or corrupted object
file. Task id #579.

[ BUG FIXES ]

- Fixed bug with content type being reset when decline_dirs=0.
Submitted by Brian Phillips. Task id #584.
- Put "Mason" prefix back in Params.pod. Task id #575.
- Fixed fetch_comp(undef) to not return an empty hash. Task id #578.
- static_source_touch_file did not take effect until after one request
for a top-level component.  Reported by Lai Zit Seng. Task id #576.

1.29_01  January 25, 2005

[ INCOMPATIBLE CHANGES ]

- ** Mason now requires Perl 5.6.0 or later. However, because 5.6.0
has so many problems, it cannot be officially supported; we strongly
recommend upgrading to at least 5.6.1.
- ** Mason now requires version 1.24 of mod_perl in the ApacheHandler
module.
- ** The behaviors of $m->flush_buffer and $m->clear_buffer have been